# next-memory-prediction

./: .gitignore  PROVENANCE.md  pyproject.toml  readme.md
configs/: development.yaml  reference.yaml  smoke.yaml
configs/experiments/: round1_development.yaml  round1_lightning_baselines.yaml  round1_reference_template.yaml  round1_smoke.yaml
configs/scales/: development.yaml  reference.yaml  smoke.yaml
documents/: against_predicting_latents.md  idea.md  references.md  to_test.md
nmp/: __init__.py  artifacts.py  checkpoint.py  config.py  countdown.py  data.py  diagnostics.py  evaluation.py  experiment_plan.py  experiments.py  factory.py  models.py  objectives.py  plotting.py  probing.py  provenance.py  runtime.py  tokenizer_asset.py  training.py
nmp/cli/: evaluate.py  freeze_reference_experiment.py  generate_countdown.py  generate_countdown_data.py  plot.py  probe.py  run_experiment.py  run_matrix.py  summarize.py  train.py
scripts/: run_development_matrix.sh  run_lightning_baselines.sh  run_reference_matrix.sh
tests/: conftest.py  test_checkpoint.py  test_cli_smoke.py  test_config_data.py  test_evaluation.py  test_experiments.py  test_models.py  test_objectives.py  test_training.py
tests/fixtures/: countdown_generalization.txt  countdown_train.txt  countdown_val.txt  tinystories_train.txt  tinystories_val.txt
